# translate

./: .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.heroku  README.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  heroku-entrypoint.sh  prospector.yaml  pyproject.toml
.github/workflows/: docker-image.yml
main/: admin.py  constants.py  convertors.py  enums.py  models.py  scripts.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20190625_2016.py  0003_auto_20190625_2029.py  0004_auto_20220308_1130.py
main/static/css/: main.css
main/templates/: main.html  wrapper.html
server/: settings.py  urls.py
vserver/Scripts/: activate  activate.bat  activate.xsh  django-admin.py
