[tool.poetry]
name = "numconverter"
version = "0.1.0"
description = ""
authors = ["Daniil <d.istomin@we-are-talents.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
isort = "^5.10.1"
psycopg2-binary = "^2.9.3"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
prospector = {extras = ["with-everything"], version = "^1.7.6"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
